알림 Link 삭제, 업로드, 랭킹 페이지 Link 구현

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -1,31 +1,39 @@
 .Footer {
-    background: #000000;
-    align-items:center;
-    justify-content: center;
+  background: #000000;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: auto;
+  figure {
+    text-align: center;
+    figcaption {
+      color: white;
+    }
+  }
+  .Title {
+    font-size: 30px;
+    font-weight: bold;
+    color: white;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+  .icon-group {
     display: flex;
-    flex-direction: column;
-    height: 10rem;
-    figure {
-        text-align: center;
-        figcaption {
-            color: white;
-        }
-    }
-    .icon-group {
-        display:flex;
-    }
-    .contact {
-        font-family: 'Zilla Slab';
-        color: white;
-    }
+    margin-bottom: 20px;
+  }
+  .contact {
+    font-family: 'Zilla Slab';
+    color: white;
+    margin-bottom: 20px;
+  }
 }
 
-
 img {
-    background: #000000;
+  background: #000000;
 }
 
 @font-face {
-    font-family: 'Zilla Slab';
-    src: url(../asset/font/ZillaSlab.ttf);
+  font-family: 'Zilla Slab';
+  src: url(../asset/font/ZillaSlab.ttf);
 }
