--- a/src/components/MainLayout_Home.scss
+++ b/src/components/MainLayout_Home.scss
@@ -7,8 +7,8 @@
     justify-content: center;
     .Item {
       font-family: Roboto;
-      margin-left: 2rem;
-      margin-right: 2rem;
+      margin-left: 20px;
+      margin-right: 20px;
       color: #626060;
     }
   }
@@ -20,7 +20,7 @@
       }
       .Bar {
         height: 8rem;
-        background: #ffffff;
+        background: #626060;
       }
     }
   }
