--- a/src/components/HeaderTemplate.scss
+++ b/src/components/HeaderTemplate.scss
@@ -3,16 +3,15 @@
   height: 12rem;
   display: flex;
   align-items: center;
-  //justify-content: center;
   flex-direction: column;
   .Top {
-    //background: #ffffff;
-    margin-top: 0.25rem;
+    margin-top: 10px;
     margin-left: auto;
     display: flex;
     .Item {
-      margin-left: 3rem;
-      margin-right: 1rem;
+      margin-left: 2rem;
+      margin-right: 2rem;
+      display: flex;
       color: #ffffff;
     }
   }
@@ -21,14 +20,13 @@
     font-family: HSBomBaram 2;
     font-size: 48px;
     line-height: 48px;
-    padding-bottom: 1rem;
+    padding-bottom: 10px;
     letter-spacing: 0.15em;
 
     color: #e05344;
   }
   .Search {
     display: flex;
-    //border: 1px solid #e5e5e5;
     input {
       width: 526px;
       height: 30px;
@@ -40,10 +38,12 @@
       background: #868e96;
       padding-left: 1rem;
       padding-right: 1rem;
+      border: #000000;
     }
   }
   .Bottom {
     margin-top: auto;
+    margin-bottom: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -54,4 +54,8 @@
       color: #ffffff;
     }
   }
+}
+
+.noti {
+  cursor: pointer;
 }
