--- a/src/scss/Footer.scss
+++ b/src/scss/Footer.scss
@@ -21,6 +21,9 @@
   .icon-group {
     display: flex;
     margin-bottom: 20px;
+    a {
+      text-decoration: none;
+    }
   }
   .contact {
     font-family: 'Zilla Slab';
