footer 글자색 변경, 메인 중간 이미지 반응형으로

--- a/src/scss/Footer.scss
+++ b/src/scss/Footer.scss
@@ -17,6 +17,9 @@
     color: white;
     margin-top: 30px;
     margin-bottom: 30px;
+    .Clorit {
+      color:#e05344;
+    }
   }
   .icon-group {
     display: flex;
