--- a/src/scss/MainLayout_Home.scss
+++ b/src/scss/MainLayout_Home.scss
@@ -6,6 +6,8 @@
     .Item {
       img {
         object-fit: none;
+        max-width: 100%;
+        height: auto;
       }
       .Bar {
         height: 190px;
