--- a/src/scss/MainLayout_Artists.scss
+++ b/src/scss/MainLayout_Artists.scss
@@ -48,4 +48,10 @@
       font-size: 16px;
     }
   }
+  .text{
+    color: #ffffff;
+    font-size: 18px;
+    margin: 0 auto;
+    text-decoration: none;
+  }
 }
