전체적으로 밑에 footer 와 body 사이의 간격 조절, 상세검색 실시간 검색어 추가, 방탄소년단 그룹 페이지 추가.

--- a/src/scss/MainLayout_Bts.scss
+++ b/src/scss/MainLayout_Bts.scss
@@ -1,5 +1,5 @@
-.MainLayout_Jimin {
-  min-height: 800px;
+.MainLayout_Bts {
+  min-height: 600px;
   background: black;
   color:white;
   display:block;
