--- a/src/scss/MainLayout_Search.scss
+++ b/src/scss/MainLayout_Search.scss
@@ -3,6 +3,10 @@
     background: black;
     color:white;
     display:block;
+    .img{
+      margin-left: 50px;
+      margin-top: 50px;
+    }
   .bigContainer{
     display: block;
     margin-bottom: 20px;
